--- a/qos.bib
+++ b/qos.bib
@@ -1,40 +1,51 @@
-@inproceedings{riscI-isca1981,
-  title = {{RISC I}: {A} Reduced Instruction Set {VLSI} Computer},
-  author = {David A. Patterson and Carlo H. S\'{e}quin},
-  booktitle = {ISCA},
- location = {Minneapolis, Minnesota, USA},
-  pages = {443-458},
-  year = {1981}
+@electronic{PRIV,
+  title = {RISC-V Instruction Set Manual, Volume II: Privileged Architecture },
+  url = {https://github.com/riscv/riscv-isa-manual},
+  year = {}
+}
+@INPROCEEDINGS{SSAMPLE,
+  author={Thornock, N.C. and Flanagan, J.K.},
+  booktitle={2000 Winter Simulation Conference Proceedings (Cat. No.00CH37165)},
+  title={Facilitating level three cache studies using set sampling},
+  year={2000},
+  volume={1},
+  number={},
+  pages={471-479 vol.1},
+  doi={10.1109/WSC.2000.899754}
+}  
+@article{PTCAMP,
+  author = {Du Bois, Kristof and Eyerman, Stijn and Eeckhout, Lieven},
+  title = {Per-Thread Cycle Accounting in Multicore Processors},
+  year = {2013},
+  issue_date = {January 2013},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {9},
+  number = {4},
+  issn = {1544-3566},
+  url = {https://doi.org/10.1145/2400682.2400688},
+  doi = {10.1145/2400682.2400688},
+  journal = {ACM Trans. Archit. Code Optim.},
+  month = {jan},
+  articleno = {29},
+  numpages = {22},
+}
+@inproceedings{HERACLES,
+  author = {Lo, David and Cheng, Liqun and Govindaraju, Rama and Ranganathan, Parthasarathy and Kozyrakis, Christos},
+  title = {Heracles: Improving Resource Efficiency at Scale},
+  year = {2015},
+  isbn = {9781450334020},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/2749469.2749475},
+  doi = {10.1145/2749469.2749475},
+  booktitle = {Proceedings of the 42nd Annual International Symposium on Computer Architecture},
+  pages = {450–462},
+  numpages = {13},
+  location = {Portland, Oregon},
+  series = {ISCA '15}
 }
 
-@InProceedings{Katevenis:1983,
- author = {Katevenis, Manolis G.H. and Sherburne,Jr., Robert W. and Patterson, David A. and S{\'e}quin, Carlo H.},
- title = {The {RISC II} micro-architecture},
-  booktitle = {Proceedings VLSI 83 Conference},
-  year =      1983,
-  month =     {August}}
 
-@inproceedings{Ungar:1984,
- author = {David Ungar and Ricki Blau and Peter Foley and Dain Samples
-                  and David Patterson},
- title = {Architecture of {SOAR}: {Smalltalk} on a {RISC}},
- booktitle = {ISCA},
- address = {Ann Arbor, MI},
- year = {1984},
- pages = {188--197}
-} 
 
-@Article{spur-jsscc1989,
-  author =       {David D. Lee and Shing I. Kong and Mark D. Hill and
-                  George S. Taylor and David A. Hodges and Randy
-                  H. Katz and David A. Patterson},
-  title =        {A {VLSI} Chip Set for a Multiprocessor
-                  Workstation--{Part I}: An {RISC} Microprocessor with
-                  Coprocessor Interface and Support for Symbolic
-                  Processing},
-  journal =      {IEEE JSSC},
-  year =         1989,
-  volume =    24,
-  number =    6,
-  pages =     {1688--1698},
-  month =     {December}}
+
