--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -1,47 +1,417 @@
-[[chapter2]]
-== The Second Chapter
+[[BC_QOS]]
+== Bandwidth-controller QoS Register Interface
 
-. The first item.
+Controllers, such as memory controllers, that support bandwidth allocation and
+bandwidth usage monitoring provide a memory-mapped register programming
+interface.
 
-. The second item.
-+
-.. The first sub item.
-
-.. The second sub item.
-+
-[CAUTION]
-====
-A moment of caution is required for this block of text must be read and apreciated for its importance.
-====
-
-. Yet another item.
-
-. Again, an item.
-
-.. A multi-line item.
-+
-This item has multiple lines.
-+
-By multiple lines, this is what we mean.
-+
-Seriously, multiple.
-
-=== An example table
-
-[cols="^1,^1,^1,^1,^3,^3",stripes=even,options="header"]
+.Bandwidth-Controller QoS register layout
+[width=100%]
+[%header, cols="^3,10,^3, 18, 5"]
 |===
-4+|Letters _and_ bits {set:cellbgcolor:green} 2+|A much longer area
-|L|R|W|X|Quarter 1|Quarter 2
-|{set:cellbgcolor:!} 0|0|0|0 2+|Rows alternate colors
-|0|0|0|1|Thing 1|Thing 2
-|1|0|0|0|Thing 3|Thing 4
-|1|1|1|1 2+|Span Thing 1 and 2
+|Offset|Name              |Size    |Description                 | Optional?
+|0     |`bc_capabilities` |8       |<<BC_CAP, Capabilities>>    | No
+|8     |`bc_mon_ctl`      |8       |<<BC_MCTL, Usage monitoring
+                                      control>>                 | Yes
+|16    |`bc_mon_ctr_val`  |8       |<<BC_MCTR, Monitoring
+                                      counter value>>           | Yes
+|24    |`bc_alloc_ctl`    |8       |<<BC_ALLOC, Bandwidth 
+                                    allocation control>>        | Yes
+|32    |`bc_bw_alloc`     |8       |<<BC_BMASK, Bandwidth 
+                                    allocation>>                | Yes
 |===
 
-=== Sub section
+The reset value is 0 for the following registers fields.
 
-Diam donec adipiscing tristique risus indexterm:[risus]. Nisl rhoncus mattis rhoncus urna. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero id. Massa vitae tortor condimentum lacinia quis vel. Donec ac odio tempor orci. Mi sit amet mauris commodo quis imperdiet massa tincidunt. Quis enim lobortis scelerisque fermentum dui. Lacus viverra vitae congue eu. Sed faucibus turpis in eu mi bibendum neque. Sit amet porttitor eget dolor. Aliquet eget sit amet tellus cras adipiscing enim. Id cursus metus aliquam eleifend mi. Vestibulum lorem sed risus ultricies tristique nulla aliquet.
+* `bc_mon_ctl` - `BUSY` and `STATUS` fields
+* `bc_alloc_ctl` - `BUSY` and `STATUS` fields
 
-=== Yet another subsection
+The reset value is `UNSPECIFIED` for all other registers and/or fields.
 
-Quam lacus suspendisse faucibus interdum posuere lorem ipsum. Nulla aliquet enim tortor at auctor urna nunc id cursus. Massa massa ultricies mi quis hendrerit dolor magna. Integer enim neque volutpat ac tincidunt. Dolor magna eget est lorem ipsum dolor. Urna neque viverra justo nec. Neque gravida in fermentum et. Fringilla ut morbi tincidunt augue interdum velit euismod. Dolor sit amet consectetur adipiscing elit. Eu facilisis sed odio morbi. In cursus turpis massa tincidunt dui. Orci indexterm:[orci] phasellus egestas tellus rutrum tellus. Semper eget duis at tellus at urna condimentum. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur.
+The bandwidth controllers at reset allocate all available bandwidth to `RCID`
+value of 0. When the bandwidth controller supports bandwidth allocation per
+access-type, one of the supported access-types for `RCID=0` is allocated all
+available bandwidth and all other access-types share the bandwidth allocation
+with that access-type. The bandwidth allocation for all other `RCID` values is
+`UNSPECIFIED`.
+
+[[BC_CAP]]
+=== Capabilities (`bc_capabilities`)
+
+The `bc_capabilities` register is a read-only register that holds the
+bandwidth-controller capabilities.
+
+.Capabilities register fields
+[wavedrom, , ]
+....
+{reg: [
+  {bits:  8, name: 'VER'},
+  {bits: 16, name: 'NBWBLKS'},
+  {bits:  7, name: 'MRBWB'},
+  {bits: 25, name: 'reserved:'},
+  {bits:  8, name: 'custom'},
+], config:{lanes: 4, hspace:1024}}
+....
+
+The `VER` field holds the version of the specification implemented by the
+capacity controller. The low nibble is used to hold the minor version of the
+specification and the upper nibble is used to hold the major version of the
+specification. For example, an implementation that supports version 1.0 of the
+specification reports 0x10.
+
+The `NBWBLKS` field holds the total number of available bandwidth blocks in 
+the controller. The bandwidth represented by an available bandwidth block is
+`UNSPECIFIED`. The bandwidth controller supports reserving bandwidth in
+multiples of a bandwidth block and thereby support proportional allocation of
+bandwidth.
+
+Bandwidth controllers may limit the maximum bandwidth that may be reserved by
+allocating to workloads to a fraction of the `NBWBLKS`. The `MRBWB` field holds
+a number between 1 and 100 to represent this fraction. This number is termed as
+`MaxRsvdBWBlocks`. 
+
+[latexmath]
+++++
+    MaxRsvdBWBlocks = \round \left(  \frac{ MRBWB x NBWBLKS }{100} \right)
+++++
+
+[NOTE]
+====
+The bandwidth controller needs to meter the bandwidth usage by a workload to
+determine if its exceeding its allocations and if required invoke necessary
+measures to throttle the bandwidth usage by the workload. The instantaneous
+bandwdith use by a workload may thus undershoot or overshoot the configured
+allocation. The QoS capabilities are statistical in nature and are typically
+designed to enforce the configured bandwidth over larger time windows. Not
+allowing all available bandwidth blocks to be reserved for allocation may allow
+the bandwidth controller with handle such transient inaccuracies.
+====
+
+[[BC_MCTL]]
+=== Usage monitoring control (`bc_mon_ctl`)
+
+The `bc_mon_ctl` register is used to control monitoring of capacity usage by a
+`MCID`. When the controller does not support capacity usage monitoring the
+`bc_mon_ctl` register is read-only zero.
+
+.Usage monitoring control (`bc_mon_ctl`)
+[wavedrom, , ]
+....
+{reg: [
+  {bits:  5, name: 'OP (WARL)'},
+  {bits:  3, name: 'AT (WARL)'},
+  {bits: 12, name: 'MCID (WARL)'},
+  {bits:  8, name: 'EVT_ID (WARL)'},
+  {bits:  1, name: 'ATV (WARL)'},
+  {bits:  3, name: 'WPRI'},
+  {bits:  7, name: 'STATUS (RO)'},
+  {bits:  1, name: 'BUSY (RO)'},
+  {bits: 24, name: 'WPRI'},
+], config:{lanes: 8, hspace:1024}}
+....
+
+Bandwidth controllers that support bandwidth usage monitoring implement a usage
+monitoring counter for each supported `MCID`. The usage monitoring counter may
+be configured to count a monitoring event. When an event matching the event
+configured for the `MCID` occurs then the monitoring counter is updated. The
+event matching may optionally be filtered by the access-type. The monitoring 
+counter for bandwidth usage counts the number of bytes transferred by requests
+matching the monitoring event as the requests go past the monitoring point.
+
+The `OP` field is used to instruct the controller to perform an operation
+listed in <<BC_MON_OP>>.
+
+The `EVT_ID` field and is to program the identifier of the event to count in
+the counter selected by `MCID`. The `AT` field is used to program the access-type to count. 
+
+When the `EVT_ID` for a `MCID` is selected as 0, the counter retains its
+current value but stops counting.
+
+When `EVT_ID` is programmed with a non-zero and legal value, the counter resets
+to 0, the `OVF` bit is cleared to 0, and the counter starts counting the
+programmed events for requests with `MCID` and `AT` (if `ATV` is 1). When `ATV`
+is 0, the counter counts requests with all access-types and the `AT` value is
+ignored.
+
+A controller that does not support monitoring by access-type may hardwire the
+`ATV` and `AT` fields to 0.
+
+[[BC_MON_OP]]
+.Usage monitoring operations (`OP`)
+[width=100%]
+[%header, cols="16,^12,70"]
+|===
+|Operation     | Encoding ^| Description
+|--            | 0         | Reserved for future standard use.
+|`CONFIG_EVENT`| 1         | Configure the counter selected by `MCID` to count
+                             the event selected by `EVT_ID`, `AT`, and `ATV`.
+                             The `EVT_ID` encodings are listed in <<BC_EVT_ID>>.
+|`READ_COUNTER`| 2         | Snapshot the value of the counter selected by
+                             `MCID` into `bc_mon_ctr_val` register. The
+                             `EVT_ID`, `AT` and `ATV` fields are not used by
+                             this operation.
+| --           | 3-23      | Reserved for future standard use.
+| --           | 24-31     | Designated for custom use.
+|===
+
+
+[[BC_EVT_ID]]
+.Bandwidth monitoring event ID (`EVT_ID`)
+[width=100%]
+[%header, cols="15,^10,40"]
+|===
+|Event ID      | Encoding ^| Description
+|`None`        | 0         | Counter does not count and retains its value.
+|`Total Read
+  and Write
+  byte count`  | 1         | Counter is incremented by the number of bytes
+                             transferred by a matching read or write request
+                             as the requests go past the monitor.
+|`Total Read
+  byte count`  | 2         | Counter is incremented by the number of bytes
+                             transferred by a matching read request as the
+                             requests go past the monitor
+|`Total Write
+  byte count`  | 3         | Counter is incremented by the number of bytes
+                             transferred by a matching write request as the
+                             requests go past the monitor
+| --           | 4-127     | Reserved for future standard use.
+| --           | 127-128   | Designated for custom use.
+|===
+
+When the `bc_mon_ctl` is written, the controller may need to perform several
+actions that may not complete synchronously with the write. A write to the
+`bc_mon_ctl` sets the `BUSY` bit to 1 indicating the controller is performing
+the requested operation. When the `BUSY` bit reads 0 the operation is complete
+and the `STATUS` field provides a status value (<<BC_MON_STS>>) of the
+requested operation.
+
+[[BC_MON_STS]]
+.`bc_mon_ctl.STATUS` field encodings
+[width=100%]
+[%header, cols="12,70"]
+|===
+|`STATUS` | Description
+| 0       | Reserved
+| 1       | Operation was successfully completed.
+| 2       | Invalid operation (`OP`) requested.
+| 3       | Operation requested for invalid `MCID`.
+| 4       | Operation requested for invalid `EVT_ID`.
+| 5       | Operation requested for invalid `AT`.
+| 6-63    | Reserved for future standard use.
+| 64-127  | Designated for custom use.
+|===
+
+Behavior of writes to the `bc_mon_ctl` when `BUSY` is 1 is `UNSPECIFIED`. Some
+implementations may ignore the second write and others may perform the
+operation determined by the second write. Software must verify that `BUSY` is 0
+before writing `bc_mon_ctl`.
+
+[[BC_MCTR]]
+=== Monitoring counter value (`bc_mon_ctr_val`)
+
+The `bc_mon_ctr_val` is a read-only register that holds a snapshot of the
+counter requested by `READ_COUNTER` operation.
+
+.Usage monitoring counter value (`bc_mon_ctr_val`)
+[wavedrom, , ]
+....
+{reg: [
+  {bits:  62, name: 'CTR'},
+  {bits:  1, name: 'INVALID'},
+  {bits:  1, name: 'OVF'},
+], config:{lanes: 4, hspace:1024}}
+....
+
+The counter is valid if the `INVALID` field is 0. The counter may be marked
+`INVALID` if the controller for `UNSPECIFIED` reasons determine the count to be
+not valid. The counters marked `INVALID` may become valid in future. If an
+unsigned integer overflow of the counter occurs then the `OVF` bit is set to 1.
+
+[NOTE]
+====
+A counter may be marked as `INVALID` if the controller has not been able to 
+establish an accurate counter value for the monitored event.
+====
+
+The counter provides the byte transferred by requests matching the `EVT_ID` as
+the requests go past the monitoring point. A bandwidth value may be determined
+by reading the byte count value at two instances of time `T1` and `T2`. If the
+value of the counter at time `T1` was `B1` and at time `T2` is `B2` then the
+bandwidth is as follows. The frequency of the time source is
+latexmath:[T_{freq}].
+
+[latexmath]
+++++
+    Bandwidth = T_{freq} \times \frac{ B2 - B1 }{T2 - T1}
+++++
+
+The width of the counter is `UNSPECIFIED`.
+
+[NOTE]
+====
+The width of the counter is `UNSPECIFIED` but is recommended to be wide enough
+to not cause more than one overflow per sample when sampled at a frequency of
+1 Hz.
+
+If an overflow was detected then software may discard that sample and reset the
+counter and overflow indication by reprogramming the event using `CONFIG_EVENT`
+operation.
+====
+
+[[BC_ALLOC]]
+=== Bandwidth Allocation control (`bc_alloc_ctl`)
+
+The `bc_alloc_ctl` register is used to control allocation of bandwidth to a
+`RCID` per `AT`. If a controller does not support capacity allocation then the
+register is read-only zero. If the controller does not support capacity
+allocation per access-type then the `AT` field is read-only zero.
+
+.Bandwidth allocation control (`bc_alloc_ctl`)
+[wavedrom, , ]
+....
+{reg: [
+  {bits:  5, name: 'OP (WARL)'},
+  {bits:  3, name: 'AT (WARL)'},
+  {bits: 12, name: 'RCID (WARL)'},
+  {bits: 12, name: 'WPRI'},
+  {bits:  7, name: 'STATUS (RO)'},
+  {bits:  1, name: 'BUSY (RO)'},
+  {bits: 24, name: 'WPRI'},
+], config:{lanes: 8, hspace:1024}}
+....
+
+The `OP` field is used to instruct the bandwidth controller to perform an
+operation listed in <<BC_ALLOC_OP>>. The `bc_alloc_ctl` register is used in
+conjuction with the `bc_bw_alloc` register to perform bandwidth allocation
+operations. When the requested operation uses the operands configured in
+`bc_bw_alloc`, software must first program the `bc_bw_alloc` register with
+the operands for the operation before requesting the operation.
+
+[[BC_ALLOC_OP]]
+.Bandwidth allocation operations (`OP`)
+[width=100%]
+[%header, cols="16,^12,70"]
+|===
+|Operation     | Encoding ^| Description
+|--            | 0         | Reserved for future standard use.
+|`CONFIG_LIMIT`| 1         | The `CONFIG_LIMIT` operation is used to establish
+                             reserved bandwidth allocation for requests by
+                             `RCID` and of access-type `AT`. The bandwidth
+                             allocation is specified in `bc_bw_alloc` register.
+|`READ_LIMIT`  | 2         | The `READ_LIMIT` operation is used to read back
+                             the previously configured bandwidth allocation for
+                             requests by `RCID` and of type `AT`. The current
+                             configured allocation is written to `bc_bw_alloc`
+                             register on completion of the operation.
+| --           | 3-23      | Reserved for future standard use.
+| --           | 24-31     | Designated for custom use.
+|===
+
+A bandwidth allocation must be configured for each supported access-type by 
+the controller. When differentiated bandwidth allocation based on access-type
+is not required, one of the access-types may be designated to hold a default
+bandwidth allocation and the other access-types configured to share the
+allocation with the default access-type. The behavior is `UNSPECIFIED` if
+bandwidth is not allocated for each access-type supported by the controller.
+
+When the `bc_alloc_ctl` is written, the controller may need to perform several
+actions that may not complete synchronously with the write. A write to the
+`bc_alloc_ctl` sets the `BUSY` bit to 1 indicating the controller is performing
+the requested operation. When the `BUSY` bit reads 0 the operation is complete
+and the `STATUS` field provides a status value (<<BC_ALLOC_STS>>) of the
+requested operation.
+
+[[BC_ALLOC_STS]]
+.`bc_alloc_ctl.STATUS` field encodings
+[width=100%]
+[%header, cols="12,70"]
+|===
+|`STATUS` | Description
+| 0       | Reserved
+| 1       | Operation was successfully completed.
+| 2       | Invalid operation (`OP`) requested.
+| 3       | Operation requested for an invalid `RCID`.
+| 4       | Operation requested for an invalid `AT`.
+| 5       | Invalid/unsupported reserved bandwidth blocks requested.
+| 6-63    | Reserved for future standard use.
+| 64-127  | Designated for custom use.
+|===
+
+[[BC_BMASK]]
+=== Bandwidth allocation (`bc_bw_alloc`)
+
+The `bc_bw_alloc` is used to program reserved bandwidth blocks (`Rbwb`) for an
+`RCID` for requests of access-type `AT`. The bandwidth is allocated in
+multiples of bandwidth blocks and the value in `Rbwb` must be at least 1 and
+must not exceed `MaxRsvdBWBlocks` else the operation fails with
+`STATUS=5`. The sum of `Rbwb` allocated across all `RCID` must not exceed
+`MaxRsvdBWBlocks` else the operation fails with `STATUS=5`.
+
+.Bandwidth allocation (`bc_bw_alloc`)
+[wavedrom, , ]
+....
+{reg: [
+  {bits: 16, name: 'Rbwb (WARL)'},
+  {bits:  4, name: 'WPRI'},
+  {bits:  8, name: 'Mweight (WARL)'},
+  {bits:  1, name: 'isDef (WARL)'},
+  {bits:  1, name: 'useDef (WARL)'},
+  {bits: 34, name: 'WPRI'},
+], config:{lanes: 8, hspace:1024}}
+....
+
+Bandwidth allocation is typically enforced by the bandwidth controller over
+finite accounting windows. The process involves measuring the bandwidth
+consumption over an accounting window and using the measured bandwidth to
+determine if an `RCID` is exceeding its bandwidth allocations for each
+access-types. The specifics of how the accounting window is implemented is
+`UNSPECIFIED` but is expected to provide a statistically accurate control of 
+the bandwidth usage over a few accounting intervals.
+
+The `Rbwb` represents the bandwidth that is made available to a `RCID` for
+requests matching `AT` even when all other `RCID` are using their full
+allocation of bandwidth.
+
+If there is non-reserved or unused bandwidth available in an accounting
+interval then additional bandwidth may be made available to `RCID` that contend
+for that bandwidth. The non-reserved or unused bandwidth is proportionately
+shared by the contending RCIDs using the configured `Mweight`. The `Mweight`
+parameter is a number between 0 and 255. A larger weight implies a greater
+fraction of the bandwidth. The sharing of non-reserved bandwidth is not
+differentiated by access-type. The `Mweight` parameter must be programmed
+identically for all access-types. If this parameter is programmed differently
+for each access-type then the controller may use the parameter configured for
+any of the access-types but the behavior is otherwise well defined. The share
+of unused bandwidth made available to `RCID=x` when it contents with another 
+`RCID` is determined by the `Mweight` of `RCID=x` divided by the sum of
+`Mweight` of all other contending `RCID`. This ratio `P` is as follows:
+
+[latexmath]
+++++
+    P = \frac{Wweight_{x}}{\sum_{r=1}^{r=n} Mweight_{r}}
+++++
+
+[NOTE]
+====
+The bandwidth enforcement is typically work-conserving and allows unused 
+bandwidth to be used by requestors even if they have consumed their `Rbwb`.
+
+When contending for unused bandwidths the weighted share is typically 
+computed among the `RCIDs` that are actively generating requests in that
+accounting interval.
+====
+
+When `isDef` is 1, the bandwidth allocation programmed for that access-type is
+considered the default bandwidth allocation. If unique bandwidth allocation is
+not required for an access-type then the `useDef` may be used to indicate that
+requests of this access-type share bandwidth allocated for the default
+access-type. Only one access-type may be designated as the default access-type.
+The `isDef` and `useDef` fields are reserved if the controller does not support
+bandwidth allocation per access-type. If more than one access-types have been
+configured with `isDef` programmed to 1 then the implementation may associate
+an access-type programmed with `useDef` with any of those but the behavior is
+otherwise well defined. If an access-type is configured with `useDef` as 1 but
+no other access-type is configured to be the default access-type then the 
+implementation may select any of the access-types as the default access-type but
+the behavior is otherwise well defined.
