--- a/qos_identifiers.adoc
+++ b/qos_identifiers.adoc
@@ -55,6 +55,8 @@ occupancy, memory bandwidth, etc.).
 
 Access to `sqoscfg` when `V=1` causes a virtual-instruction exception.
 
+[NOTE]
+====
 At reset it is suggested that the `RCID` field of `sqoscfg` be set to 0 as
 typically the resource controllers in the SoC default to a reset behavior
 of associating all capacity or bandwidth to the `RCID` value of 0.
@@ -62,85 +64,10 @@ of associating all capacity or bandwidth to the `RCID` value of 0.
 The value of `MCID` at reset, unlike the `RCID`, does not affect functional
 behavior. Implementations may choose a convenient legal value for the `MCID`
 reset value.
+====
 
 The `RCID` and `MCID` configured in the `sqoscfg` CSR apply to all privilege
 modes of software execution on that hart.
-
-In a typical implementation the number of `RCID` bits implemented (e.g., to
-support 10s of `RCIDs`) may be smaller than the number of `MCID` bits
-implemented (e.g., to support 100s of `MCIDs`). It is a typical usage to
-associate a group of applications/VMs with a common `RCID`. The group being
-associated with a common `RCID` thus shares a common pool of resource
-allocations. The resource allocation for the `RCID` is established to meet the
-SLA objectives of all members of the group. If SLA objectives of one or more
-members of the group stop being met, the resource usage of one or more members
-of the group may be monitored by associating them with a unique `MCID` and this
-iterative analysis process use to determine the optimal strategy - increasing
-resources allocated to the `RCID`, moving some members to a different `RCID`,
-migrating some members away to another machine, etc. - for restoring the SLA.
-Having a sufficiently large pool of `MCID` speeds up this analysis. The usage
-motivates separate IDs for allocation and monitoring.
-
-Typically, the contents of the `sqoscfg` CSR is updated with a new `RCID`
-and/or `MCID` by the HS/S-mode scheduler if the `RCID` and/or `MCID` of the
-new process/VM is not same as that of the old process/VM.
-
-The `RCID` and `MCID` configured in `sqoscfg` also apply to execution in
-S/HS-mode but is typically not an issue. Usually, S/HS-mode execution occurs to
-provide services, such as through the SBI, to software executing at lower
-privilege. Since the S/HS-mode invocation was to provide a service for the
-lower privilege mode, the S/HS-mode software may not modify the `sqoscfg` CSR.
-
-If a use case requires use of separate `RCID` and/or `MCID` for software
-execution in S/HS-mode, then the S/HS-mode SW may update the `sqoscfg` CSR and
-restore it prior to returning to the lower privilege mode execution.
-
-Usually for virtual machines the resource allocations are configured by the
-hypervisor. Usually the Guest OS in a virtual machine does not participate in
-the QoS flows as the Guest OS does not know the physical capabilities of the
-platform or the resource allocations for other virtual machines in the system.
-If a use case requires it, a hypervisor may virtualize the QoS capability to a
-VM by virtualizing the memory-mapped CBQRI register interface and using the
-virtual-instruction exception on access to `sqoscfg` CSR.
-
-[NOTE]
-====
-If the use of directly selecting among a set of `RCID` and/or `MCID` by a VM
-becomes more prevalent and the overhead of virtualizing the `sqoscfg` CSR using
-the virtual instruction exception is not acceptable then a future extension may
-be introduced where the `RCID`/`MCID` attempted to be written by VS mode are
-used as a selector for a set of `RCID`/`MCID` that the hypervisor configures in
-a set of HS mode CSRs.
-====
-
-A Hypervisor may cause a context switch from one virtual machine to another. The
-context switch usually involves saving the context associated with the VM being
-switched away from and restoring the context of the VM being switched to. Such
-context switch may be invoked in response to an explicit call from the VM (i.e,
-as a function of an `ECALL` invocation) or may be done asynchronously (e.g., in
-response to a timer interrupt). In such cases the hypervisor may want to execute
-with the `sqoscfg` configurations of the VM being switched away from such that
-the execution is attributed to the VM being switched from and then prior to
-executing the context switch code associated with restoring the new VMs context
-first switch to the `sqoscfg` appropriate for the new VM being switched to such
-that all of that execution is attributed to the new VM. Further in this context
-switch process, if the hypervisor intends some of the execution to be attributed
-to neither the outgoing VM nor the incoming VM, then the hypervisor may switch
-to a new configuration that is different from the configuration of either of the
-VMs for the duration of such execution. QoS extensions are statistical in
-nature and the small duration, such as the few instructions in the hypervisor
-trap handler entrypoint, for which the HS-mode may execute with the `RCID`/
-`MCID` established for lower privilege mode operation may not be statistically
-significant.
-
-The `RCID` and `MCID` configured in `sqoscfg` also apply to execution in M-mode
-but is typically not an issue. Usually, M-mode execution occurs to provide
-services, such as through the SBI interface, to software executing at lower
-privilege. Since the M-mode invocation was to provide a service for the lower
-privilege mode, the M-mode software may not modify the `sqoscfg` CSR. If a use
-case requires use of a separate `RCID` and/or `MCID` for software execution in
-M-mode, then the M-mode SW may update the `sqoscfg` CSR and restore it prior to
-returning to lower privilege mode execution.
 
 ==== Device initiated requests
 
@@ -156,7 +83,7 @@ a shim is `UNSPECIFIED`.
 
 If the system supports an IOMMU, then the IOMMU may be configured with the
 `RCID` and `MCID` to associate requests from the device with the QoS
-indetifiers. The RISC-V IOMMU specification may support a future standard
+identifiers. The RISC-V IOMMU specification may support a future standard
 extension to support this configuration.
 
 === Access-type (`AT`)
